# RustyRunways

./: .gitignore  Cargo.toml  README.md  codecov.yml  commands.md  mkdocs.yml  rust-toolchain.toml  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  pypi-publish.yml  python-build.yml  python-dev-tests.yml  python-lint.yml  python-wheels.yml  rust-ci.yml  tauri-release.yml
apps/tauri/: README.md
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: main.rs
apps/tauri/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
benchmarks/: README.md  run_benchmarks.py  sanity.yaml  sanity_report.py  scenarios.example.yaml  setup.sh
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  lib.rs  main.rs  read.rs
crates/cli/tests/: cli_tests.rs  command_tests.rs
crates/commands/: Cargo.toml
crates/core/: Cargo.toml
crates/gui/: Cargo.toml
crates/py/: Cargo.toml  pyproject.toml
crates/py/examples/: cli_script.py  random_agent.py  vector_env_random.py
crates/py/python/rusty_runways/: __init__.py  gym_env.py
crates/py/src/: lib.rs
crates/py/tests/: test_basic.py  test_gym_env_obs.py  test_gym_wrapper.py  test_py_api.py  test_wrapper.py
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: demo.md  index.md  releases.md
docs/cli/: index.md
docs/core/: airplanes.md  custom_worlds.md  economy.md  errors.md  events.md  index.md
docs/dev/: coverage.md
docs/gui/: index.md
docs/python/: index.md
examples/: sample_world.yaml  sample_world_generated.yaml  sample_world_manual_orders.yaml  sample_world_no_orders.yaml
scripts/: build_web_demo.sh  bump_versions.py  check.sh  coverage.sh  dev_tauri.sh
site/: 404.html  demo.html  index.html  releases.html  sitemap.xml
site/cli/: index.html
site/core/: airplanes.html  custom_worlds.html  economy.html  errors.html  events.html  index.html
site/dev/: coverage.html
site/gui/: index.html
site/python/: index.html
site/search/: search_index.json
site/web-demo/: index.html
src/: airports.rs  cli.rs  commands.pest  commands.rs  events.rs  game.rs  lib.rs  main.rs  player.rs
src/airplanes/: airplanes.rs  basic_airplane.rs  mod.rs
src/utils/: airport.rs  coordinate.rs  errors.rs  map.rs  mod.rs  read.rs
tests/: airplane_tests.rs  airport_tests.rs  cli_tests.rs  command_tests.rs  coordinate_tests.rs  errors_tests.rs  events_tests.rs  game_tests.rs  map_tests.rs  orders_tests.rs  player_tests.rs  smoke.rs
(+57 files in other folders)
