[package]
name = "rusty_runways_wasm"
version = "2.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
once_cell = "1.19"
rusty_runways_core = { path = "../core" }
getrandom = { version = "0.2", features = ["js"] }
strum = { version = "0.27" }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
