[package]
name = "rusty_runways_tauri"
version = "2.0.4"
edition = "2021"

[dependencies]
# Tauri desktop shell (v2)
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.27"
serde_yaml = "0.9"

# Game core
rusty_runways_core = { path = "../../../crates/core" }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[package.metadata.tauri]
config = { file = "tauri.conf.json" }
